--- a/portfolio/about.html
+++ b/portfolio/about.html
@@ -45,10 +45,14 @@
                 <div class="about-left">
                     <ul class="custom-list">
                         <li>Based in Korea, working in Web3 and blockchain research</li>
-                        <li>3 years of work experience</li>
-                        <li>Python scripting for on-chain data, smart contract analytics</li>
+                        <li>3 years of work experience (as of 2025)</li>
+                        <li>Noob at Python scripting for on-chain data, smart contract analytics</li>
+                        <li>Noob at javascript and solidity</li>
                         <li>Trying to write as I think(or think as I write)</li>
                         <li>INTJ (but more of the very far end of I)</li>
+                        <li>MTB, night driving, FISHING</li>
+                        <li>Travel to Singapore more often than I had thought (due to my wife, who is Singaporean)</li>
+                        <li>Tarkov and Tarkov like fan</li>
                         <li>Lofi music</li>
                     </ul>
                 </div>
@@ -57,13 +61,14 @@
                 </div>
             </section>
             <section class="timeline-section">
-                <h2>Work experience</h2>
+                <h2>life experience</h2>
                 <div class="timeline">
                     <div class="timeline-item left">
                         <div class="timeline-content">
                             <h3>Wemade</h3>
                             <h4>[2022.12 - 2024.03]</h4>
-                            <p>Assistant Manager, Research & Business Development - Led DeFi infrastructure analysis and
+                            <p>Assistant Manager, Research & Business Development</p>
+                            <p>Led DeFi infrastructure analysis and
                                 ecosystem onboarding for WEMIX 3.0.</p>
                         </div>
                     </div>
@@ -71,7 +76,8 @@
                         <div class="timeline-content">
                             <h3>Coinplug (CP Labs)</h3>
                             <h4>[2022.07 - 2022.12]</h4>
-                            <p>Assistant Manager, Research & Business Development - Analyzed projects, onboarded dApps,
+                            <p>Assistant Manager, Research & Business Development</p>
+                            <p>Analyzed projects, onboarded dApps,
                                 and coordinated validator relations for WEMIX 3.0.</p>
                         </div>
                     </div>
@@ -79,8 +85,23 @@
                         <div class="timeline-content">
                             <h3>Blockwater Technologies</h3>
                             <h4>[2021.10 - 2022.07]</h4>
-                            <p>Research Analyst – Conducted on-chain research and due diligence on DeFi protocols and
+                            <p>Research Analyst </p>
+                            <p>Conducted on-chain research and due diligence on DeFi protocols and
                                 blockchain investments.</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item right">
+                        <div class="timeline-content">
+                            <h3>Republic of Korea Marine Corps</h3>
+                            <h4>[2017.03 - 2019.02]</h4>
+                            <p>First Lieutenant, SigInt Platoon Commander & Company Leader & Staff SigInt Officer</p>
+                        </div>
+                    </div>
+                    <div class="timeline-item left">
+                        <div class="timeline-content">
+                            <h3>Seoul National University</h3>
+                            <h4>[2011.09 - 2017.02]</h4>
+                            <p>Bachelor of Engineering - Computer Science</p>
                         </div>
                     </div>
                 </div>
